--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="Content-Security-Policy" content="script-src 'self';">
 		<title>Electron Chat</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<div id="electronChat"></div>
 	</body>
+	<script src="./build/js/app.js"></script>
 </html>
